Issue #14177: marshal.loads() now raises TypeError when given an unicode string. Patch by Guilherme Gonçalves.